[package]
name = "quartz_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firestore-db-and-auth = "0.6.1"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "framework", "standard_framework"] }
lazy_static = "1.4.0"
envy = "0.4.2"
async_once = "0.2.6"
reqwest = "0.11.16"
chrono = "0.4.24"
rand = "0.8.5"
svg = "0.13.1"
nsvg = "0.5.1"
